Add postgres with GORM + telemetry with OpenTelemetry
