# docs/swagger.yaml
@@ -7,6 +7,16 @@ definitions:
     required:
     - name
     type: object
+  presenters.UserDTO:
+    properties:
+      email:
+        type: string
+      name:
+        type: string
+    required:
+    - email
+    - name
+    type: object
 host: localhost:8080
 info:
   contact: {}
@@ -118,4 +128,51 @@ paths:
               type: string
             type: object
       summary: Health Check
+  /users:
+    post:
+      consumes:
+      - application/json
+      description: Create a new user with the provided details
+      parameters:
+      - description: User details
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/presenters.UserDTO'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+        "500":
+          description: Internal Server Error
+      summary: Create a new user
+      tags:
+      - users
+  /users/{id}:
+    get:
+      description: Retrieve an entity by its ID
+      parameters:
+      - description: Entity ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/presenters.UserDTO'
+        "404":
+          description: Not Found
+      summary: Get an entity by ID
+      tags:
+      - users
 swagger: "2.0"
